--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -24,6 +24,7 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -119,6 +120,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "study-mash-properties"
+    }
+  },
+  "defaultProject": "study-mash-properties",
+  "cli": {
+    "analytics": "2b61eff0-035d-41d4-b3f2-6dc975b0e1f4"
+  }
 }
